--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -8,4 +8,15 @@
     <color name="yellow">#fff000</color>
     <color name="item_select_color">#E0F2F1</color>
     
+    
+    
+    <color name="color_primary_red">#f44336</color>
+    <color name="color_primary_red_dark">#d32f2f</color>
+    <color name="color_primary_green"> #4caf50</color>
+    <color name="color_primary_green_dark">#388e3c</color>
+    <color name="color_primary_blue">#2196f3</color>
+    <color name="color_primary_blue_dark">#1976d2</color>
+    <color name="color_accent_pink">#ff4081</color>
+    <color name="color_shadow">#44000000</color>
+    
 </resources>
