--- a/res/layout/item_test.xml
+++ b/res/layout/item_test.xml
@@ -13,6 +13,7 @@
         android:layout_height="?attr/listPreferredItemHeight"
         android:gravity="center_vertical"
         android:padding="8dp"
+        android:textSize="18sp"
         android:text="这里是测试" />
 
 </android.support.v7.widget.CardView>
